fix setupMealOnclick function, add final comments, fix overlay to start as visible

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ i {
   display: flex;
   top: 0;
   bottom: 0;
+  z-index: 9999;
 }
 
 h1,
